welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime116.FlowerCase'
 override def run() {
              ^